styles/globals.css
@import "tailwindcss";
/*
  ---break---
*/
@custom-variant dark (&:is(.dark *));

@config '../tailwind.config.ts';

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

@utility component-selected {
  @apply outline outline-1 outline-indigo-500;
}

@utility component-hovered {
  @apply outline outline-1 outline-indigo-500;
}

@utility no-scrollbar {
  /* Hide scrollbar for Chrome, Safari and Opera */
  &::-webkit-scrollbar {
    display: none;
  }
  /* Hide scrollbar for IE, Edge and Firefox */
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

@utility mask-fade {
  -webkit-mask-image: linear-gradient(to left, transparent, black 20%);
  mask-image: linear-gradient(to left, transparent, black 20%);
}

@utility bg-dot-pattern {
  background-image: conic-gradient(
    at 92% 8%,
    #202128 90deg,
    transparent 0 225deg,
    transparent 0
  );
  background-size: 15px 15px;
}

@utility bg-dot-pattern-white {
  background-image: conic-gradient(
    at 92% 8%,
    #303132 90deg,
    transparent 0 225deg,
    transparent 0
  );
  background-size: 15px 15px;
}

@utility glass {
  &::after {
    content: "";
    position: absolute;
    inset: 0;
    bottom: calc(-1 * var(--glass-extend, 6rem));
    -webkit-mask-image: linear-gradient(
      to bottom,
      black 0,
      black calc(100% - var(--glass-extend, 6rem)),
      transparent calc(100% - var(--glass-extend, 6rem))
    );
    mask-image: linear-gradient(
      to bottom,
      black 0,
      black calc(100% - var(--glass-extend, 6rem)),
      transparent calc(100% - var(--glass-extend, 6rem))
    );
    -webkit-backdrop-filter: blur(var(--glass-blur, 1rem));
    backdrop-filter: blur(var(--glass-blur, 1rem));
  }
}

.dark .w-color-sketch {
  --sketch-background: #323232 !important;
}

.dark .w-color-swatch {
  --sketch-swatch-border-top: 1px solid #525252 !important;
}

.dark .w-color-block {
  --block-background-color: #323232 !important;
  --block-box-shadow: rgb(0 0 0 / 10%) 0 1px !important;
}

.dark .w-color-editable-input {
  --editable-input-label-color: #757575 !important;
  --editable-input-box-shadow: #616161 0px 0px 0px 1px inset !important;
  --editable-input-color: #bbb !important;
}

.dark .w-color-github {
  --github-border: 1px solid rgba(0, 0, 0, 0.2) !important;
  --github-background-color: #323232 !important;
  --github-box-shadow: rgb(0 0 0 / 15%) 0px 3px 12px !important;
  --github-arrow-border-color: rgba(0, 0, 0, 0.15) !important;
}

.dark .w-color-compact {
  --compact-background-color: #323232 !important;
}

.dark .w-color-material {
  --material-background-color: #323232 !important;
  --material-border-bottom-color: #707070 !important;
}

.dark .w-color-alpha {
  --alpha-pointer-background-color: #6a6a6a !important;
  --alpha-pointer-box-shadow: rgb(0 0 0 / 37%) 0px 1px 4px 0px !important;
}

/*
  ---break---
*/

:root {
  --primary: 240 5.9% 10%;
  --sidebar-background: 0 0% 98%;
  --sidebar-foreground: 0 0% 32.2%;
  --sidebar-primary: 240 5.9% 10%;
  --sidebar-primary-foreground: 0 0% 98%;
  --sidebar-accent: 0 0% 93.1%;
  --sidebar-accent-foreground: 0 0% 9%;
  --sidebar-border: 220 13% 91%;
  --sidebar-ring: 24.6 95% 53.1%;
  --color-1: 0 100% 63%;
  --color-2: 270 100% 63%;
  --color-3: 210 100% 63%;
  --color-4: 195 100% 63%;
  --color-5: 90 100% 63%;
  --glass-blur: 1rem;
  --glass-extend: 6rem;
}

.dark {
  --primary: 0 0% 98%;
  --sidebar-background: 0 0% 9%;
  --sidebar-foreground: 0 0% 63.9%;
  --sidebar-primary: 224.3 76.3% 48%;
  --sidebar-primary-foreground: 0 0% 100%;
  --sidebar-accent: 240 3.7% 15.9%;
  --sidebar-accent-foreground: 240 4.8% 95.9%;
  --sidebar-border: 240 3.7% 15.9%;
  --sidebar-ring: 24.6 95% 53.1%;
  --color-1: 0 100% 63%;
  --color-2: 270 100% 63%;
  --color-3: 210 100% 63%;
  --color-4: 195 100% 63%;
  --color-5: 90 100% 63%;
  --glass-blur: 1rem;
  --glass-extend: 6rem;
}

/*
  ---break---
*/

@theme inline {
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
  --rainbow: rainbow var(--speed, 2s) infinite linear;
  --color-color-5: var(----color-5);
  --color-color-4: var(----color-4);
  --color-color-3: var(----color-3);
  --color-color-2: var(----color-2);
  --color-color-1: var(----color-1);
  @keyframes rainbow {
    0% {
      background-position: 0%;
    }
    100% {
      background-position: 200%;
    }
  }
}

